[package]
name = "abap-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
adt-query = { path = "C:/dev/adt-query", features = ["reqwest"] }
reqwest = "0.12"
