[workspace]
members = ["lib/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
adt-query = { path = "./lib/adt-query", features = ["reqwest"] }
reqwest = { version = "0.12", features = [
    "native-tls",
    "blocking",
    "rustls-tls",
] }
