[package]
name = "abap-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "abap-language-server"
path = "./src/main.rs"

[dependencies]
tower-lsp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber = "0.3"

adt-query.workspace = true
reqwest.workspace = true
