[package]
name = "vfs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
adt-query = { workspace = true }
slotmap = { version = "1.0", features = ["serde"] }
futures-util = "0.3.31"
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
reqwest = { workspace = true }
url = "2.5.4"
